🎨 Replace React branding with professional lightning bolt assets and update social icons
✨ New Features:
- Professional lightning bolt favicon and app icons (16x16, 32x32, 48x48, 180x180, 192x192, 512x512)
- React Icons library integration for professional social media icons
- X (formerly Twitter) icon updates throughout website
- Improved development startup script (start-dev-improved.sh)

🔧 Technical Updates:
- Updated HTML meta tags and manifest.json for new branding assets
- Replaced emoji social icons with professional React Icons (Feather style)
- Monochrome social icon strategy with brand colors (#00d4ff, #00a8cc)
- Updated Twitter URLs to X.com throughout codebase
- Enhanced icon accessibility with proper titles and external link attributes

🎯 Components Updated:
- Footer: Professional social media icons with hover effects
- About page: Team bio modal icons (email, LinkedIn, X)
- Support page: Section header icons (email, clock, message)
- All favicons and app icons replaced with lightning bolt branding

🗑️ Cleanup:
- Removed all React logo placeholder assets
- Removed temporary icon generation script
- Updated package.json with react-icons dependency

This update establishes consistent, professional branding across the entire Energy Museum website.

--- a/backend/user/config/system.yaml
+++ b/backend/user/config/system.yaml
@@ -43,3 +43,15 @@ debugger:
     close_connection: true
 gpm:
   verify_peer: true
+
+# Production Database Configuration for Hostinger
+database:
+  default:
+    driver: mysql
+    host: localhost
+    port: 3306
+    database: u747221136_energy_museum
+    username: u747221136_justinjramalho
+    password: JustinIsTheBest1!
+    charset: utf8mb4
+    collation: utf8mb4_unicode_ci
