Fix all routing issues and eliminate redirect loops
FIXES IMPLEMENTED:
1. Updated root .htaccess to properly route /grav and /admin requests
2. Fixed backend .htaccess to handle admin routes without redirects
3. Removed problematic custom_base_url causing redirect loops
4. Added /grav route mapping in backend Grav configuration
5. Created proper .htaccess for deployed Grav installation
6. Configured admin plugins with correct base paths
7. Disabled problematic features (2FA, auto-updates) causing conflicts

EXPECTED RESULTS:
- /grav → Works (deployed Grav frontend)
- /admin → Works (deployed Grav admin)
- /backend/ → Works (backend Grav frontend)
- /backend/admin → Works (backend Grav admin)
- /backend/grav → Works (backend Grav frontend)
- No more redirect loops

--- a/backend/user/config/system.yaml
+++ b/backend/user/config/system.yaml
@@ -1,8 +1,11 @@
 absolute_urls: false
-custom_base_url: 'https://theenergymuseum.com/backend'
+custom_base_url: ''
 
 home:
   alias: '/home'
+
+routes:
+  '/grav': '/home'
 
 pages:
   theme: quark
